@@ -125,8 +125,8 @@ static void open_agent_log(server_rec *s, pool *p)
     }
     else if (*cls->fname != '\0') {
         if ((cls->agent_fd = ap_popenf(p, fname, xfer_flags, xfer_mode)) < 0) {
-            perror("open");
-            fprintf(stderr, "httpd: could not open agent log file %s.\n", fname);
+            ap_log_error(APLOG_MARK, APLOG_ERR, s,
+                         "httpd: could not open agent log file %s.\n", fname);
             exit(1);
         }
     }
