@@ -916,9 +916,8 @@ static config_log_state *open_config_log(server_rec *s, pool *p,
     else {
         char *fname = ap_server_root_relative(p, cls->fname);
         if ((cls->log_fd = ap_popenf(p, fname, xfer_flags, xfer_mode)) < 0) {
-            perror("open");
-            fprintf(stderr, "httpd: could not open transfer log file %s.\n",
-                    fname);
+            ap_log_error(APLOG_MARK, APLOG_ERR, s,
+                         "httpd: could not open transfer log file %s.\n", fname);
             exit(1);
         }
     }
